# shiny-rs

./: .gitignore  Cargo.toml  README.md
src/: graphics.rs  main.rs  simulation.rs  vector.rs
src/scene/: mesh.rs  mod.rs  shader.rs
src/simulation/: mod.rs  particle.rs  system.rs
src/util/: mod.rs  time.rs  vector.rs
