[package]

name = "shiny"
version = "0.0.1"
authors = ["Ruben Bakker <rubenbak@gmail.com>"]

[dependencies.gfx]

git = "http://github.com/gfx-rs/gfx-rs"

[dependencies.event]

git = "https://github.com/PistonDevelopers/event"

[dependencies.sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.shader_version]

git = "https://github.com/pistondevelopers/shader_version"